css fix for speaker overflow scrolling iOS

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3083,6 +3083,7 @@ h1, h2, h3, h4 {
         top: 0;
         left: 0;
         overflow: scroll;
+        -webkit-overflow-scrolling: touch;
       }
     }
   }
